--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <header>
         <div class="container">
             <ul class="main-menu flex-container">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Credits</a></li>
-                <li><a href="#">Exchange</a></li>
-                <li><a href="#">Partners</a></li>
-                <li><a href="#">Stock</a></li>
-                <li><a href="#">Holding</a></li>
-                <li><a href="#">About</a></li>
+                <a href="#"><li>Home</li></a>
+                <a href="#"><li>Credits</li></a>
+                <a href="#"><li>Exchange</li></a>
+                <a href="#"><li>Partners</li></a>
+                <a href="#"><li>Stock</li></a>
+                <a href="#"><li>Holding</li></a>
+                <a href="#"><li>About</li></a>
             </ul>
         </div>
     </header>
@@ -34,7 +34,7 @@
                         <h1>ParrotWings Exchange</h1>
                         <div>
                             <input type="search" placeholder="Search..">
-                            <a href=""><i class="fas fa-search"></i></a>
+                            <a href="#"><i class="fas fa-search"></i></a>
                         </div>
                     </section>
                     <section class="products">
@@ -69,6 +69,10 @@
                                 <p>2 props</p>
                                 <h3>Holiday works</h3>
                                 <a href="#" class="btn-order">Order</a>
+                                <div class="popuptext" id="myPopup">
+                                    <h4>Popup header</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                                </div>
                             </div>
                             <div class="card flex-container">
                                 <img src="img/6.png" alt="">
@@ -89,6 +93,9 @@
                                 <a href="#" class="btn-order">Order</a>
                             </div>
                         </div>
+                        <a href="#">
+                            <p>More products...</p>
+                        </a>
                     </section>
                 </div>
                 <div class="right-column">
@@ -113,13 +120,115 @@
                             <a href="#" class="btn-white">Connect</a>
                         </form>
                     </section>
-
-
-
                 </div>
             </div>
         </div>
     </main>
+
+    <footer>
+        <section class="logo-wrapper">
+            <div class="container flex-container">
+                <div class="left-column flex-container">
+                    <a href="#"><svg><path d="M35.252,7.514c-0.299-1.596-1.248-2.383-2.107-2.692c-0.926-0.334-2.804-0.681-5.163-0.959
+				c-1.898-0.224-4.13-0.205-5.478-0.164c-0.162-1.107-0.939-2.123-1.809-2.473c-2.316-0.932-5.866-0.706-6.785-0.449
+				c-0.731,0.204-1.57,0.626-2.019,1.27c-0.302,0.431-0.466,0.982-0.468,1.752c0,0.435,0.012,1.463,0.023,2.375
+				c0.011,0.915-0.007,1.734-0.007,1.739c-0.001,0.815-0.662,1.508-1.48,1.51H6.203c-0.801,0-1.413,0.135-1.881,0.347
+				c-0.468,0.213-0.8,0.468-1.052,0.807c-0.502,0.673-0.589,1.504-0.587,2.352c0,0,0.007,0.692,0.174,2.033
+				C2.996,16,4.122,23.247,5.191,25.451c0.415,0.857,0.691,1.215,1.505,1.593c1.815,0.777,5.96,1.641,7.903,1.888
+				c1.939,0.248,3.156,0.769,3.881-0.751c0.002-0.004,0.145-0.378,0.342-0.928c0.63-1.907,0.718-3.598,0.718-4.823
+				c0-0.124,0.182-0.13,0.182,0c0,0.864-0.165,3.924,2.147,4.744c0.913,0.323,2.807,0.612,4.731,0.838
+				c1.74,0.2,3.002,0.884,3.002,5.345c0,2.714-0.57,3.086-3.552,3.086c-2.417,0-3.339,0.062-3.339-1.856
+				c0-1.552,1.535-1.389,2.673-1.389c0.508,0,0.139-0.378,0.139-1.334c0-0.953,0.596-1.521,0.032-1.535
+				c-3.934-0.108-6.248,0.014-6.248,4.931c0,4.464,1.709,5.292,7.293,5.292c4.377,0,5.92-0.143,7.728-5.748
+				c0.358-1.107,1.223-4.483,1.746-10.153C36.405,21.065,35.762,10.245,35.252,7.514z M27.621,19.474
+				c-0.541-0.019-1.061,0.015-1.546,0.093c0.137-1.102,0.592-2.454,2.204-2.398c1.785,0.062,2.034,1.748,2.041,2.889
+				C29.567,19.723,28.636,19.509,27.621,19.474z M6.048,8.302c0,0,0,0,0.002,0h3.756c0.215,0,0.389-0.175,0.389-0.388
+				c0-0.001-0.046-3.219-0.046-4.113V3.789c0-0.735,0.154-1.375,0.423-1.912l0.128-0.241c-0.014,0.002-0.028,0.009-0.043,0.023
+				L3.36,8.893C3.346,8.904,3.337,8.919,3.333,8.935C3.484,8.86,3.69,8.758,3.719,8.745C4.354,8.458,5.125,8.302,6.048,8.302z"></path></svg></a>
+                    <a href="#"><i class="fab fa-facebook-square fa-3x"></i></a>
+                    <a href="#"><i class="fab fa-pinterest-p fa-3x"></i></a>
+                    <a href="#"><i class="fab fa-twitter fa-3x"></i></a>
+                    <a href="#"><i class="fab fa-youtube fa-3x"></i></a>
+                    <a href="#"><i class="fab fa-github-alt fa-3x"></i></a>
+                </div>
+                <div class="right-column flex-container">
+                    <a href="#">
+                        <p>© Parrot Wings</p>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section class="nav-wrapper">
+            <div class="container flex-container">
+                <div class="left-column flex-container">
+                    <div class="info">
+                        <h2>Recruitment Info</h2>
+                        <ul>
+                            <a href="#">
+                                <li>Candidate First Name: Username</li>
+                            </a>
+                            <a href="#">
+                                <li>Candidate Last Name: Username</li>
+                            </a>
+                            <a href="#">
+                                <li>Spent Time: X hours</li>
+                            </a>
+                            <a href="#">
+                                <li>Email: username@server.name</li>
+                            </a>
+                            <a href="#">
+                                <li>Test date: dd.mm,yyyy</li>
+                            </a>
+                        </ul>
+                    </div>
+                    <div class="resources">
+                        <h2>Resources</h2>
+                        <ul>
+                            <a href="#">
+                                <li>Loader icon --- search on Fontello.com</li>
+                            </a>
+                            <a href="#">
+                                <li>Icons --- Entypo</li>
+                            </a>
+                            <a href="#">
+                                <li>Fonts --- search in this file</li>
+                            </a>
+                            <a href="#">
+                                <li>Background --- standart situation:<br>designer lose file</li>
+                            </a>
+                        </ul>
+                    </div>
+                    <div class="navigation">
+                        <h2>Navigation</h2>
+                        <ul>
+                            <a href="#">
+                                <li>Development</li>
+                            </a>
+                            <a href="#">
+                                <li>Application</li>
+                            </a>
+                            <a href="#">
+                                <li>Holding</li>
+                            </a>
+                            <a href="#">
+                                <li>About</li>
+                            </a>
+                        </ul>
+                    </div>
+                </div>
+                <div class="right-column flex-container">
+                    <div class="browsers-logo flex-container">
+                        <img src="img/firefox.png" alt="firefox">
+                        <img src="img/chrome.png" alt="chrome">
+                        <img src="img/internetexploer.png" alt="internetexploer">
+                        <img src="img/safari.png" alt="safari">
+                        <img src="img/opera.png" alt="opera">
+                    </div>
+                    <p>Project should work on next stack:<br>IE11, actual version of Firefox, Chrome<br> on desktop and android, Opera (opera mini),<br> Safari on mac and ios.</p>
+                </div>
+            </div>
+        </section>
+    </footer>
 
 </body>
 
